--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Wilcon - Free Bootstrap 4 Template by Colorlib</title>
+	<title>Modern Structures</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	
@@ -28,7 +28,7 @@
 				<div class="col-sm text-center text-md-left mb-md-0 mb-2 pr-md-4 d-flex topper align-items-center">
 					<p class="mb-0 w-100">
 						<span class="fa fa-paper-plane"></span>
-						<span class="text">youremail@email.com</span>
+						<span class="text">harshhanda21@gmail.com</span>
 					</p>
 				</div>
 				<div class="col-sm justify-content-center d-flex mb-md-0 mb-2">
@@ -53,7 +53,7 @@
 				<div class="col-md-4 d-flex mb-2 mb-md-0">
 					<a class="navbar-brand d-flex align-items-center" href="index.html">
 						<span class="flaticon flaticon-crane"></span>
-						<span class="ml-2">Wilcon <small>Construction Company</small></span>
+						<span class="ml-2">Modern Structures <small>Your Satisfaction Is Our Priority</small></span>
 					</a>
 				</div>
 				<div class="col-md-4 d-flex topper mb-md-0 mb-2 align-items-center">
@@ -61,8 +61,8 @@
 						<span class="fa fa-map"></span>
 					</div>
 					<div class="pr-md-4 pl-md-3 pl-3 text">
-						<p class="con"><span>Free Call</span> <span>+1 234 456 78910</span></p>
-						<p class="con">Call Us Now 24/7 Customer Support</p>
+						<p class="con"><span>Let's Talk?</span> <span>+91 98188 18865</span></p>
+						<p class="con">Call Us Now</p>
 					</div>
 				</div>
 				<div class="col-md-4 d-flex topper mb-md-0 align-items-center">
@@ -70,7 +70,7 @@
 					</div>
 					<div class="text pl-3 pl-md-3">
 						<p class="hr"><span>Our Location</span></p>
-						<p class="con">198 West 21th Street, Suite 721 New York NY 10016</p>
+						<p class="con">Plot No 6-F, Sector 104, Noida, UP, India 201304</p>
 					</div>
 				</div>
 			</div>
@@ -84,10 +84,10 @@
 			<div class="collapse navbar-collapse" id="ftco-nav">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-					<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
+					<li class="nav-item"><a href="about.html" class="nav-link">About Us</a></li>
 					<li class="nav-item"><a href="services.html" class="nav-link">Services</a></li>
 					<li class="nav-item"><a href="project.html" class="nav-link">Projects</a></li>
-					<li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>
+<!--					<li class="nav-item"><a href="blog.html" class="nav-link">Blog</a></li>-->
 					<li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
 				</ul>
 				<a href="#" class="btn-custom" data-toggle="modal" data-target="#exampleModalCenter">Inquire Now</a>
@@ -156,18 +156,18 @@
 				<div class="col-md-6 py-5 pl-md-5">
 					<div class="row justify-content-center mb-4 pt-md-4">
 						<div class="col-md-12 heading-section ftco-animate">
-							<span class="subheading">Welcome to Wilcon</span>
-							<h2 class="mb-4">Wilcon A Construction Company</h2>
+							<span class="subheading">Welcome to Modern Structures</span>
+							<h2 class="mb-4">A Residential Construction Company</h2>
 							<div class="d-flex about">
 								<div class="icon"><span class="flaticon-hammer"></span></div>
-								<h3>We're in this business since 1975 and We provide the best insdustrial services</h3>
+								<h3>We're in this business since 2001 and We provide the best Residential services</h3>
 							</div>
 							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
 							<div class="d-flex video-image align-items-center mt-md-4">
 								<a href="#" class="video img d-flex align-items-center justify-content-center" style="background-image: url(images/about-2.jpg);">
 									<span class="fa fa-play-circle"></span>
 								</a>
-								<h4 class="ml-4">This is how we work on our clients, Watch video</h4>
+								<h4 class="ml-4">This is how we work for our clients!</h4>
 							</div>
 						</div>
 					</div>
@@ -449,70 +449,70 @@
 		</div>
 	</section>
 
-	<section class="ftco-section bg-light">
-		<div class="container">
-			<div class="row justify-content-center mb-5 pb-3">
-				<div class="col-md-10 heading-section text-center ftco-animate">
-					<span class="subheading">Our Blog</span>
-					<h2 class="mb-4">Latest Blog Updates</h2>
-				</div>
-			</div>
-			<div class="row d-flex">
-				<div class="col-lg-4 ftco-animate">
-					<div class="blog-entry">
-						<a href="blog-single.html" class="block-20" style="background-image: url('images/image_1.jpg');">
-						</a>
-						<div class="text d-block">
-							<div class="meta">
-								<p>
-									<a href="#"><span class="fa fa-calendar mr-2"></span>Sept. 06, 2020</a>
-									<a href="#"><span class="fa fa-user mr-2"></span>Admin</a>
-									<a href="#" class="meta-chat"><span class="fa fa-comment mr-2"></span> 3</a>
-								</p>
-							</div>
-							<h3 class="heading"><a href="#">Best for any industrial &amp; business solution</a></h3>
-							<p><a href="blog.html" class="btn btn-secondary py-2 px-3">Read more</a></p>
-						</div>
-					</div>
-				</div>
+<!--	<section class="ftco-section bg-light">-->
+<!--		<div class="container">-->
+<!--			<div class="row justify-content-center mb-5 pb-3">-->
+<!--				<div class="col-md-10 heading-section text-center ftco-animate">-->
+<!--					<span class="subheading">Our Blog</span>-->
+<!--					<h2 class="mb-4">Latest Blog Updates</h2>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--			<div class="row d-flex">-->
+<!--				<div class="col-lg-4 ftco-animate">-->
+<!--					<div class="blog-entry">-->
+<!--						<a href="blog-single.html" class="block-20" style="background-image: url('images/image_1.jpg');">-->
+<!--						</a>-->
+<!--						<div class="text d-block">-->
+<!--							<div class="meta">-->
+<!--								<p>-->
+<!--									<a href="#"><span class="fa fa-calendar mr-2"></span>Sept. 06, 2020</a>-->
+<!--									<a href="#"><span class="fa fa-user mr-2"></span>Admin</a>-->
+<!--									<a href="#" class="meta-chat"><span class="fa fa-comment mr-2"></span> 3</a>-->
+<!--								</p>-->
+<!--							</div>-->
+<!--							<h3 class="heading"><a href="#">Best for any industrial &amp; business solution</a></h3>-->
+<!--							<p><a href="blog.html" class="btn btn-secondary py-2 px-3">Read more</a></p>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--				</div>-->
 
-				<div class="col-lg-4 ftco-animate">
-					<div class="blog-entry">
-						<a href="blog-single.html" class="block-20" style="background-image: url('images/image_2.jpg');">
-						</a>
-						<div class="text d-block">
-							<div class="meta">
-								<p>
-									<a href="#"><span class="fa fa-calendar mr-2"></span>Sept. 06, 2020</a>
-									<a href="#"><span class="fa fa-user mr-2"></span>Admin</a>
-									<a href="#" class="meta-chat"><span class="fa fa-comment mr-2"></span> 3</a>
-								</p>
-							</div>
-							<h3 class="heading"><a href="#">Best for any industrial &amp; business solution</a></h3>
-							<p><a href="blog.html" class="btn btn-secondary py-2 px-3">Read more</a></p>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 ftco-animate">
-					<div class="blog-entry">
-						<a href="blog-single.html" class="block-20" style="background-image: url('images/image_3.jpg');">
-						</a>
-						<div class="text d-block">
-							<div class="meta">
-								<p>
-									<a href="#"><span class="fa fa-calendar mr-2"></span>Sept. 06, 2020</a>
-									<a href="#"><span class="fa fa-user mr-2"></span>Admin</a>
-									<a href="#" class="meta-chat"><span class="fa fa-comment mr-2"></span> 3</a>
-								</p>
-							</div>
-							<h3 class="heading"><a href="#">Best for any industrial &amp; business solution</a></h3>
-							<p><a href="blog.html" class="btn btn-secondary py-2 px-3">Read more</a></p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
+<!--				<div class="col-lg-4 ftco-animate">-->
+<!--					<div class="blog-entry">-->
+<!--						<a href="blog-single.html" class="block-20" style="background-image: url('images/image_2.jpg');">-->
+<!--						</a>-->
+<!--						<div class="text d-block">-->
+<!--							<div class="meta">-->
+<!--								<p>-->
+<!--									<a href="#"><span class="fa fa-calendar mr-2"></span>Sept. 06, 2020</a>-->
+<!--									<a href="#"><span class="fa fa-user mr-2"></span>Admin</a>-->
+<!--									<a href="#" class="meta-chat"><span class="fa fa-comment mr-2"></span> 3</a>-->
+<!--								</p>-->
+<!--							</div>-->
+<!--							<h3 class="heading"><a href="#">Best for any industrial &amp; business solution</a></h3>-->
+<!--							<p><a href="blog.html" class="btn btn-secondary py-2 px-3">Read more</a></p>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--				</div>-->
+<!--				<div class="col-lg-4 ftco-animate">-->
+<!--					<div class="blog-entry">-->
+<!--						<a href="blog-single.html" class="block-20" style="background-image: url('images/image_3.jpg');">-->
+<!--						</a>-->
+<!--						<div class="text d-block">-->
+<!--							<div class="meta">-->
+<!--								<p>-->
+<!--									<a href="#"><span class="fa fa-calendar mr-2"></span>Sept. 06, 2020</a>-->
+<!--									<a href="#"><span class="fa fa-user mr-2"></span>Admin</a>-->
+<!--									<a href="#" class="meta-chat"><span class="fa fa-comment mr-2"></span> 3</a>-->
+<!--								</p>-->
+<!--							</div>-->
+<!--							<h3 class="heading"><a href="#">Best for any industrial &amp; business solution</a></h3>-->
+<!--							<p><a href="blog.html" class="btn btn-secondary py-2 px-3">Read more</a></p>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--				</div>-->
+<!--			</div>-->
+<!--		</div>-->
+<!--	</section>-->
 
 	<footer class="ftco-footer">
 		<div class="container mb-5 pb-4">
@@ -581,9 +581,9 @@
 				<div class="row">
 					<div class="col-md-6 aside-stretch py-3">
 						
-						<p class="mb-0"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-							Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+						<p class="mb-0">
+							Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved</i> by <a href="" target="_blank">Modern Structures</a>
+						</p>
 						</div>
 					</div>
 				</div>
