--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Modern Structures</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <title>Modern Structures - Construction Company | Construction Company in Noida | Noida</title>
+    <meta name="description" content="Best Construction Company in Noida, Turn key Projects, Civil Construction, Construction, Quality, Punctuality, Renovation, Interior, Interior Designing, Exterior, Modular Makeover, Facade Designing, Completion">
+    <meta name="keywords" content="Best Construction Company in Noida, Turn key Projects, Civil Construction, Construction, Quality, Punctuality, Renovation, Interior, Interior Designing, Exterior, Modular Makeover, Facade Designing, Completion"/>
+    <meta name="robots" content="index, follow" />
+    <meta name="googlebot" content="index, follow" />
+    <meta name="author" content="SarthakHanda">
     <script src="https://kit.fontawesome.com/2ee0bb8967.js" crossorigin="anonymous"></script>
 
     <!-- mobile specific metas
@@ -23,8 +26,8 @@
 
     <!-- Jquery Ripples
     ================================================== -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.ripples/0.5.3/jquery.ripples.min.js"></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.ripples/0.5.3/jquery.ripples.min.js"></script> -->
 
     <!-- script
     ================================================== -->
@@ -756,12 +759,12 @@
 
     </div> <!-- end photoSwipe background -->
     
-    <script>
+    <!-- <script>
 		$("#home").ripples({
 			resolution: 512,
 			perturbance: 0.04,
 		})
-	</script>
+	</script> -->
 
     <!-- preloader
     ================================================== -->
