Google Analytics added

--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html class="no-js" lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5GJK0MSHRN"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-5GJK0MSHRN');
+    </script>
 
     <!--- basic page needs
     ================================================== -->
@@ -73,19 +81,19 @@
     
                 <ul class="header-nav__social">
                     <li>
-                        <a href="#"><i class="fa fa-youtube-play"></i></a>
+                        <a href="https://www.youtube.com/watch?v=YpzZKuSinyI"><i class="fa fa-youtube-play"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-google"></i></a>
+                        <a href="https://g.page/modern-structures?share"><i class="fa fa-google"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/themodernstructures/"><i class="fa fa-instagram"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/themodernstructures/"><i class="fa fa-facebook"></i></a>
                     </li>
                     <li>
-                        <a href="#"><i class="fas fa-map-marked-alt"></i></a>
+                        <a href="https://g.page/modern-structures?share"><i class="fas fa-map-marked-alt"></i></a>
                     </li>
                 </ul>
 
@@ -145,19 +153,19 @@
 
         <ul class="home-social">
             <li>
-                <a href="#0"><i class="fa fa-youtube-play" aria-hidden="true"></i><span>Youtube</span></a>
+                <a href="https://www.youtube.com/watch?v=YpzZKuSinyI"><i class="fa fa-youtube-play" aria-hidden="true"></i><span>Youtube</span></a>
             </li>
             <li>
-                <a href="#0"><i class="fa fa-google" aria-hidden="true"></i><span>Google</span></a>
+                <a href="https://g.page/modern-structures?share"><i class="fa fa-google" aria-hidden="true"></i><span>Google</span></a>
             </li>
             <li>
-                <a href="#0"><i class="fa fa-instagram" aria-hidden="true"></i><span>Instagram</span></a>
+                <a href="https://www.instagram.com/themodernstructures/"><i class="fa fa-instagram" aria-hidden="true"></i><span>Instagram</span></a>
             </li>
             <li>
-                <a href="#0"><i class="fa fa-facebook" aria-hidden="true"></i><span>Facebook</span></a>
+                <a href="https://www.facebook.com/themodernstructures/"><i class="fa fa-facebook" aria-hidden="true"></i><span>Facebook</span></a>
             </li>
             <li>
-                <a href="#0"><i class="fas fa-map-marked-alt" aria-hidden="true"></i><span>Location</span></a>
+                <a href="https://g.page/modern-structures?share"><i class="fas fa-map-marked-alt" aria-hidden="true"></i><span>Location</span></a>
             </li>
         </ul>
         <!-- end home-social -->
@@ -648,19 +656,19 @@
 
                     <ul class="contact-social">
                         <li>
-                            <a href="#0"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
+                            <a href="https://www.youtube.com/watch?v=YpzZKuSinyI"><i class="fa fa-youtube-play" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="#0"><i class="fa fa-google" aria-hidden="true"></i></a>
+                            <a href="https://g.page/modern-structures?share"><i class="fa fa-google" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="#0"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+                            <a href="https://www.instagram.com/themodernstructures/"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="#0"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                            <a href="https://www.facebook.com/themodernstructures/"><i class="fa fa-facebook" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="#0"><i class="fas fa-map-marked-alt" aria-hidden="true"></i></a>
+                            <a href="https://g.page/modern-structures?share"><i class="fas fa-map-marked-alt" aria-hidden="true"></i></a>
                         </li>
                     </ul> <!-- end contact-social -->
 
